--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "build:examples": "webpack --config build/webpack.examples.js",
     "build": "yarn run build:debug && yarn run build:release && yarn run build:examples"
   },
-  "dependencies": {},
+  "dependencies": {
+    "d3": "^5.7.0"
+  },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
     "babel-core": "^6.0.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-syntax-class-properties": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
