--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "d3": "^5.7.0",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "save-svg-as-png": "^1.4.6"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
