--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ cache:
     - node_modules
 script:
   - yarn run build
+  - yarn run docs
+  - mv ./docs ./examples/docs
 deploy:
   provider: pages
   skip-cleanup: true
