--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:debug": "cross-env NODE_ENV=debug webpack --config build/webpack.dist.js",
     "build:release": "cross-env NODE_ENV=production webpack --config build/webpack.dist.js",
     "build:examples": "webpack --config build/webpack.examples.js",
-    "build": "yarn run build:debug && yarn run build:release && yarn run build:examples"
+    "build": "yarn run build:debug && yarn run build:release && yarn run build:examples",
+    "docs": "documentation build src/** -f html -o docs"
   },
   "dependencies": {
     "d3": "^5.7.0",
@@ -29,6 +30,7 @@
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "deep-assign": "^2.0.0",
+    "documentation": "^8.1.2",
     "extract-text-webpack-plugin": "^3.0.0",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
