--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "d3": "^5.7.0",
+    "d3-delaunay": "4.1.3",
     "lodash": "^4.17.11",
     "save-svg-as-png": "^1.4.6"
   },
