--- a/.travis.yml
+++ b/.travis.yml
@@ -7,22 +7,13 @@ cache:
     - node_modules
 script:
   - yarn run build
-  - yarn run test
+  - yarn run test:coveralls
 before_deploy:
   - yarn run docs
-  - mkdir ghpages
-  - mv ./docs ./ghpages/docs
-  - mv ./examples/index.html ./ghpages/index.html
-  - mv ./examples/examples.bundle.js ./ghpages/examples.bundle.js
+  - mv ./docs ./examples/docs
 deploy:
   provider: pages
   skip-cleanup: true
   github-token: $github_token
-  local-dir: ghpages
+  local-dir: examples
 keep-history: true
-
-jobs:
-  include:
-    - stage: Get Test Coverage
-      node_js: node
-      script: yarn run test:coveralls
