--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.0.1",
+    "babel-loader": "^8.0.4",
     "coveralls": "^3.0.2",
     "documentation": "9.0.0-alpha.0",
     "jest": "^23.6.0",
