--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint ./src/index.js",
     "build:release": "vue-cli-service build --target lib ./src/index.js",
     "build:examples": "vue-cli-service build --dest examples ./examples-src/index.js",
-    "docs": "documentation build src/** -f html -o docs",
+    "docs": "documentation build src/** -f html -o docs --config documentation.yml",
     "test:coveralls": "vue-cli-service test:unit --coverage --coverageReporters=text-lcov | coveralls",
     "test": "vue-cli-service test:unit"
   },
