Component examples in documentation

--- a/documentation.yml
+++ b/documentation.yml
@@ -4,6 +4,10 @@ toc:
   - ScatterPlot
   - StackedBarPlot
   - mixin
+  - Axis
+  - GenomeAxis
+  - PlotContainer
+  - SortOptions
   - name: Data
   - DataContainer
   - name: History
