Flattened stackedbarplot data

--- a/package.json
+++ b/package.json
@@ -60,6 +60,6 @@
   ],
   "license": "MIT",
   "author": "Mark Keller",
-  "main": "dist/vue-declarative-plots.js",
+  "main": "dist/vue-declarative-plots.umd.js",
   "repository": "https://github.com/keller-mark/vue-declarative-plots"
 }
