--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "d3": "^5.7.0",
     "d3-delaunay": "4.1.3",
     "lodash": "^4.17.11",
-    "save-svg-as-png": "^1.4.6"
+    "save-svg-as-png": "^1.4.6",
+    "simple-statistics": "^6.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.6",
