Workaround for current bugs in d3-delaunay

--- a/documentation.yml
+++ b/documentation.yml
@@ -10,6 +10,7 @@ toc:
   - HierarchicalMultiTrackPlot
   - GenomeScatterPlot
   - GenomeTrackPlot
+  - GenomeMultiTrackPlot
   - mixin
   - Axis
   - GenomeAxis
