--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "d3": "^5.7.0",
     "d3-delaunay": "4.1.3",
+    "d3-voronoi": "^1.1.4",
     "lodash": "^4.17.11",
     "save-svg-as-png": "^1.4.6",
     "simple-statistics": "^6.1.1"
