--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "colorjoe": "^4.1.0",
     "d3": "^5.7.0",
     "d3-delaunay": "4.1.3",
     "lodash": "^4.17.11",
