--- a/documentation.yml
+++ b/documentation.yml
@@ -11,6 +11,7 @@ toc:
   - GenomeScatterPlot
   - GenomeTrackPlot
   - GenomeMultiTrackPlot
+  - GenomeStackedBarPlot
   - mixin
   - Axis
   - GenomeAxis
