--- a/.travis.yml
+++ b/.travis.yml
@@ -12,14 +12,13 @@ before_deploy:
   - yarn run docs
   - mv ./docs ./examples/docs
 deploy:
-  provider: pages
-  skip-cleanup: true
-  github-token: $github_token
-  local-dir: examples
-deploy:
-  provider: npm
-  email: $npm_email
-  api_key: $npm_token
-  on:
-    tags: true
+  - provider: pages
+    skip-cleanup: true
+    github-token: $github_token
+    local-dir: examples
+  - provider: npm
+    email: $npm_email
+    api_key: $npm_token
+    on:
+      tags: true
 keep-history: true
