--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-declarative-plots",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve --open ./examples-src/index.js",
@@ -67,7 +67,7 @@
   "author": "Mark Keller",
   "main": "dist/vue-declarative-plots.umd.js",
   "files": [
-    "dist/*"
+    "dist/"
   ],
   "repository": "https://github.com/keller-mark/vue-declarative-plots"
 }
