--- a/documentation.yml
+++ b/documentation.yml
@@ -8,6 +8,7 @@ toc:
   - TrackPlot
   - MultiTrackPlot
   - HierarchicalMultiTrackPlot
+  - StratifiedBoxPlot
   - GenomeScatterPlot
   - GenomeTrackPlot
   - GenomeMultiTrackPlot
