Add SinaPlot, small fix for log axes. remove support for logY on StackedBarPlot

--- a/documentation.yml
+++ b/documentation.yml
@@ -15,6 +15,7 @@ toc:
   - GenomeMultiTrackPlot
   - GenomeStackedBarPlot
   - StratifiedScatterPlot
+  - StratifiedSinaPlot
   - mixin
   - Axis
   - GenomeAxis
