Add KaplanMeier plot

--- a/documentation.yml
+++ b/documentation.yml
@@ -16,6 +16,7 @@ toc:
   - GenomeStackedBarPlot
   - StratifiedScatterPlot
   - StratifiedSinaPlot
+  - StratifiedKaplanMeierPlot
   - mixin
   - Axis
   - GenomeAxis
