--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "d3": "^5.7.0",
     "d3-delaunay": "4.1.3",
     "lodash": "^4.17.11",
+    "pixi.js": "^4.8.5",
     "save-svg-as-png": "^1.4.6",
     "simple-statistics": "^6.1.1"
   },
