finished downloading functionality, fixed axis tick text-anchor bug

--- a/documentation.yml
+++ b/documentation.yml
@@ -8,6 +8,7 @@ toc:
   - TrackPlot
   - RectPlot
   - MultiTrackPlot
+  - MultiDataTrackPlot
   - HierarchicalMultiTrackPlot
   - StratifiedBoxPlot
   - GenomeScatterPlot
