--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vueplotlib",
-  "version": "1.4.3",
+  "version": "1.5.0",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve --open ./examples-src/index.js",
@@ -16,6 +16,7 @@
     "colorjoe": "^4.1.0",
     "d3": "^5.7.0",
     "d3-delaunay": "4.1.3",
+    "d3-dispatch-nosplit": "^2.0.1",
     "lodash": "^4.17.11",
     "save-svg-as-png": "^1.4.6",
     "simple-statistics": "^6.1.1"
