Add <Legend/> component

--- a/documentation.yml
+++ b/documentation.yml
@@ -27,6 +27,7 @@ toc:
   - SortOptions
   - CategoricalLegend
   - ContinuousLegend
+  - Legend
   - name: Data
   - DataContainer
   - name: History
