--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vueplotlib",
-  "version": "1.9.0",
+  "version": "1.10.0",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve --open ./examples-src/index.js",
@@ -17,8 +17,10 @@
     "d3": "^5.7.0",
     "d3-delaunay": "4.1.3",
     "d3-dispatch-nosplit": "^2.0.1",
+    "d3-drag": "^1.2.5",
     "lodash": "^4.17.11",
-    "simple-statistics": "^6.1.1"
+    "simple-statistics": "^6.1.1",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.6",
